--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
 
 <body>
     <div class="header">
-        <div class="burger">
             <div class="burger-container">
                 <div class="header-logo">
                     <img src="img/superpeer.svg" />
                 </div>
-                <div class="hamburger menu-toggle">
+                <div class="hamburger">
                     <div class="line"></div>
                     <div class="line"></div>
                     <div class="line"></div>
                 </div>
             </div>
-        </div>
         <div class="header-container">
             <div class="header-logo">
                 <img src="img/superpeer.svg" />
