--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </div>
     </div>
     </div>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/script.js" type="text/javascript"></script>
 </body>
 
 </html>
